# deprecated

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
examples/: sample_session.md
tests/: test_bazi.py
zhiming_life/: __init__.py  __main__.py  cli.py  conductor.py  llm.py
zhiming_life/agents/: __init__.py  bazi_master.py  supervisor.py
zhiming_life/core/: __init__.py  bazi.py  wuxing.py
zhiming_life/prompts/: README.md  __init__.py  bazi_master.py  supervisor.py
zhiming_life/rag/: README.md  __init__.py  retriever.py
